# SpinStoq

./: .gitignore  LICENSE  README.md  noise_generator_spec.md  pyproject.toml
benchmarks/: bench_noise.py
docs/: api.md  demo.ipynb  design.md  examples.md  index.md  installation.md
examples/: quick_start.ipynb
openspin/noise/: __init__.py  core.py
openspin/noise/analysis/: __init__.py  acf.py  allan.py  xcorr.py
openspin/noise/backends/: __init__.py
openspin/noise/backends/__pycache__/: _numba._scalar_recursion-26.py312.1.nbc
openspin/noise/generators/: __init__.py  ou_sum.py  spectral.py
skills/: _common.py
skills/noise-allan/: SKILL.md  run.py
skills/noise-autocorrelation/: SKILL.md  run.py
skills/noise-crosscorrelation/: SKILL.md  run.py
skills/noise-crossspectrum/: SKILL.md  run.py
skills/noise-spectrum/: SKILL.md  run.py
src/noise/: __init__.py  calibrate.py  registry.py
src/noise/analysis/: psd.py  xspec.py
src/noise/backends/: _jax.py  _numba.py  _numpy.py
src/noise/backends/__pycache__/: _numba._scalar_recursion-26.py312.2.nbc  _numba._scalar_recursion-26.py312.nbi
src/noise/generators/: compose.py  ou.py  rtn.py  spatial.py
tests/: conftest.py  test_calibrate.py  test_generators.py
